# tesi-hfi-equity-bond

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  data_manifest.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
09_risultati/decomp_canali/: REPORT_2026_06_23.md  decomp_canali.report.json
09_risultati/decomp_canali_curva_vera/: execute_12_multivar.py  results.json  results_ecb_altavilla.json  results_scaled.json
09_risultati/decomposition_daily/: execute_decomposition.py  manifest.json
09_risultati/pratica_eccesso_comov/: events_df.csv  pratica_baseline.manifest.json  pratica_baseline.report.json
09_risultati/rate_channel_gate/: HANDOFF.md  execute_gate.py
09_risultati/rate_channel_gate_FEIc1/: HANDOFF.md  execute_gate.py
09_risultati/spillover_fed_eu/: manifest_authoritative.json
09_risultati/strategie_event_driven/: manifest.json  report.json
09_risultati/term_structure_channel_gate/: verdicts.json
09_risultati/terzo_canale_residuo/: execute_13_proper_surprises.py  manifest.json  q_sensitivity.py  report.md  sensitivity.json
09_risultati/v2_signflip/: REPORT_ESECUZIONE.md  beta_H_robust_cells_w15.json  (+3 more)
CODICI_TESI/: README.md
data/: README.md
data_external/: .gitkeep
docs/: 01_overview.md  02_data_methodology.md  03_architecture.md  05_reproducibility.md  06_known_limitations.md  07_zenodo_deposit_guide.md  legacy_risultati_finali.md  results_summary.md
figure/: README.md
results/: README.md
scripts/: extract_altavilla.py  reproduce_findings.py  run_all_tests.sh  setup_data.sh  verify_data_integrity.py
(+289 files in other folders)
