[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hfi-equity-bond"
version = "1.0.0"
description = "High-Frequency Identification of Equity-Bond Comovement (Bocconi BSc thesis 2026)"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Francesco De Marte", email = "f.francesco.demarte@icloud.com"}
]
keywords = [
    "high-frequency-identification",
    "equity-bond-comovement",
    "Rigobon-Sack",
    "pre-registration",
    "Altavilla-EA-MPD",
    "Jarocinski-Karadi",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "pyarrow>=12.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.urls]
Homepage = "https://github.com/francescodemarte/tesi-hfi-equity-bond"
Repository = "https://github.com/francescodemarte/tesi-hfi-equity-bond"

[tool.setuptools.packages.find]
where = ["src"]
include = ["hfi*"]

[tool.pytest.ini_options]
testpaths = ["src/hfi/*/tests"]
addopts = "-q --tb=short"
